# cluster-registry

cmd/clusterregistry/app/: BUILD.bazel
cmd/clusterregistry/app/options/: BUILD.bazel
cmd/crinit/: BUILD.bazel
cmd/crinit/app/: BUILD.bazel
pkg/apis/clusterregistry/: BUILD.bazel  zz_generated.deepcopy.go
pkg/apis/clusterregistry/install/: BUILD.bazel
pkg/apis/clusterregistry/v1alpha1/: BUILD.bazel  zz_generated.conversion.go  zz_generated.deepcopy.go
pkg/apis/clusterregistry/validation/: BUILD.bazel
pkg/client/clientset_generated/clientset/: BUILD.bazel
pkg/client/clientset_generated/clientset/fake/: BUILD.bazel
pkg/client/clientset_generated/clientset/scheme/: BUILD.bazel
pkg/client/clientset_generated/clientset/typed/clusterregistry/v1alpha1/: BUILD.bazel  cluster.go
pkg/client/clientset_generated/clientset/typed/clusterregistry/v1alpha1/fake/: BUILD.bazel  fake_cluster.go
pkg/client/clientset_generated/internalclientset/: BUILD.bazel
pkg/client/clientset_generated/internalclientset/fake/: BUILD.bazel
pkg/client/clientset_generated/internalclientset/scheme/: BUILD.bazel
pkg/client/clientset_generated/internalclientset/typed/clusterregistry/internalversion/: BUILD.bazel  cluster.go
pkg/client/clientset_generated/internalclientset/typed/clusterregistry/internalversion/fake/: BUILD.bazel  fake_cluster.go
pkg/client/informers_generated/externalversions/: BUILD.bazel
pkg/client/informers_generated/externalversions/clusterregistry/: BUILD.bazel
pkg/client/informers_generated/externalversions/clusterregistry/v1alpha1/: BUILD.bazel
pkg/client/informers_generated/externalversions/internalinterfaces/: BUILD.bazel
pkg/client/informers_generated/internalversion/: BUILD.bazel
pkg/client/informers_generated/internalversion/clusterregistry/: BUILD.bazel
pkg/client/informers_generated/internalversion/clusterregistry/internalversion/: BUILD.bazel
pkg/client/informers_generated/internalversion/internalinterfaces/: BUILD.bazel
pkg/client/listers_generated/clusterregistry/internalversion/: BUILD.bazel
pkg/client/listers_generated/clusterregistry/v1alpha1/: BUILD.bazel
pkg/clusterregistry/: BUILD.bazel
pkg/clusterregistry/authenticator/: BUILD.bazel
pkg/clusterregistry/options/: BUILD.bazel
pkg/crinit/: BUILD.bazel
pkg/crinit/init/: BUILD.bazel
pkg/crinit/testing/: BUILD.bazel
pkg/crinit/util/: BUILD.bazel
pkg/registry/cluster/: BUILD.bazel
pkg/registry/cluster/etcd/: BUILD.bazel
pkg/registry/cluster/etcd/registrytestutil/: BUILD.bazel
