load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["crinit.go"],
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/crinit/init:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@io_k8s_apiserver//pkg/util/flag:go_default_library",
        "@io_k8s_client_go//tools/clientcmd:go_default_library",
    ],
)
