load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "cluster.go",
        "server.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/clusterregistry/app/options:go_default_library",
        "//pkg/apis/clusterregistry:go_default_library",
        "//pkg/apis/clusterregistry/install:go_default_library",
        "//pkg/apis/clusterregistry/v1alpha1:go_default_library",
        "//pkg/client/clientset_generated/internalclientset:go_default_library",
        "//pkg/client/informers_generated/internalversion:go_default_library",
        "//pkg/registry/cluster/etcd:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_spf13_pflag//:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
        "@io_k8s_apimachinery//pkg/util/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/version:go_default_library",
        "@io_k8s_apiserver//pkg/authorization/authorizerfactory:go_default_library",
        "@io_k8s_apiserver//pkg/registry/generic:go_default_library",
        "@io_k8s_apiserver//pkg/registry/rest:go_default_library",
        "@io_k8s_apiserver//pkg/server:go_default_library",
        "@io_k8s_apiserver//pkg/server/storage:go_default_library",
    ],
)
