load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["crinit.go"],
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/crinit:go_default_library",
        "@io_k8s_apiserver//pkg/util/logs:go_default_library",
        "@io_k8s_client_go//plugin/pkg/client/auth:go_default_library",
    ],
)
