load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["config.go"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_openapi_spec//:go_default_library",
        "@io_k8s_apiserver//pkg/authentication/authenticator:go_default_library",
        "@io_k8s_apiserver//pkg/authentication/authenticatorfactory:go_default_library",
        "@io_k8s_apiserver//pkg/authentication/group:go_default_library",
        "@io_k8s_apiserver//pkg/authentication/request/anonymous:go_default_library",
        "@io_k8s_apiserver//pkg/authentication/request/bearertoken:go_default_library",
        "@io_k8s_apiserver//pkg/authentication/request/union:go_default_library",
        "@io_k8s_apiserver//pkg/authentication/request/websocket:go_default_library",
        "@io_k8s_apiserver//pkg/authentication/request/x509:go_default_library",
        "@io_k8s_apiserver//pkg/authentication/token/cache:go_default_library",
        "@io_k8s_apiserver//pkg/authentication/token/tokenfile:go_default_library",
        "@io_k8s_apiserver//pkg/authentication/token/union:go_default_library",
        "@io_k8s_apiserver//plugin/pkg/authenticator/password/passwordfile:go_default_library",
        "@io_k8s_apiserver//plugin/pkg/authenticator/request/basicauth:go_default_library",
        "@io_k8s_apiserver//plugin/pkg/authenticator/token/webhook:go_default_library",
        "@io_k8s_client_go//plugin/pkg/client/auth/gcp:go_default_library",
        "@io_k8s_client_go//util/cert:go_default_library",
    ],
)
