load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["util.go"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_spf13_pflag//:go_default_library",
        "@io_k8s_client_go//tools/clientcmd:go_default_library",
    ],
)
