load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "authentication.go",
        "options.go",
        "validation.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/clusterregistry/app/authenticator:go_default_library",
        "//pkg/apis/clusterregistry/install:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_spf13_pflag//:go_default_library",
        "@io_k8s_apiserver//pkg/server:go_default_library",
        "@io_k8s_apiserver//pkg/server/options:go_default_library",
        "@io_k8s_apiserver//pkg/storage/storagebackend:go_default_library",
    ],
)
