load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["etcd.go"],
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/clusterregistry:go_default_library",
        "//pkg/registry/cluster:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apiserver//pkg/registry/generic:go_default_library",
        "@io_k8s_apiserver//pkg/registry/generic/registry:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["etcd_test.go"],
    library = ":go_default_library",
    deps = [
        "//pkg/apis/clusterregistry:go_default_library",
        "//pkg/apis/clusterregistry/install:go_default_library",
        "//pkg/registry/cluster/etcd/registrytestutil:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apiserver//pkg/registry/generic:go_default_library",
        "@io_k8s_apiserver//pkg/storage/etcd/testing:go_default_library",
    ],
)
