load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "cluster.go",
        "expansion_generated.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/clusterregistry/v1alpha1:go_default_library",
        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/labels:go_default_library",
        "@io_k8s_client_go//tools/cache:go_default_library",
    ],
)
